// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> spec renders the component 1`] = `
<DocumentFragment>
  <button
    class="button primary theme-default size-default"
    type="button"
  >
    My Button
  </button>
</DocumentFragment>
`;

exports[`<Button /> spec renders the loading button component 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    aria-label="foo"
    class="button primary theme-default size-default isLoading"
    type="button"
  >
    <div
      class="loadingSpinner small"
    >
      <div />
      <div />
      <div />
    </div>
    foo
  </button>
</DocumentFragment>
`;
